objects/advpm__Matter__c.object
<CustomObject>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notification_Email_Addresses__c</fullName>
        <label>Notification Email Addresses</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Original_Docs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Original Docs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Party_B__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Party B</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <description>Total claim value vs the Total Disposition Amount</description>
        <formula>ABS(TotalDispositionAmount__c/Total_Claim_Value_New__c) *100</formula>
        <label>Percentage (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phase_Selector__c</fullName>
        <label>Phase Selector</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Dormant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Positive_Outcome_Before_All_Costs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Positive Outcome Before All Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_current_status__c</fullName>
        <label>Previous Status</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Business_Area__c</fullName>
        <label>Primary Business Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Filtered__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Not used on any page layouts, purely used for filtering contact only for the selected primary account.</description>
        <label>Primary Contact (Filtered)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.advpm__Primary_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Matters/Deals (Primary Contact (Filtered))</relationshipLabel>
        <relationshipName>Matters_Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prime_Services_Client__c</fullName>
        <inlineHelpText>Selecting &apos;Yes&apos; indicates that this client will be signing a master Prime Brokerage Agreement</inlineHelpText>
        <label>Prime Services Client</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Master_Agreement_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prioritisation__c</fullName>
        <inlineHelpText>Impact the priority of a matter</inlineHelpText>
        <label>Prioritisation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Specify if the deal is either Public or Private (Check if it&apos;s Private, Leave it unchecked if it&apos;s Public)</description>
        <inlineHelpText>Specify if the deal is either Public or Private (Check if it&apos;s Private , Leave it unchecked if it&apos;s Public)</inlineHelpText>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Probable_Approved__c</fullName>
        <label>Probable (Approved)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Probable_For_Approval_Total__c</fullName>
        <description>17/10/17 (MS) - Add new field to calculate Probable Approved value.</description>
        <formula>Probable_For_Approval__c  +  Probable_Approved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Probable (For Approval) Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Probable_For_Approval__c</fullName>
        <label>Probable (For Approval)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product2_Id__c</fullName>
        <formula>Product2__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement Product Grouping</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Product_Area__c</field>
                <operation>equals</operation>
                <valueField>Product_Level_2__c.Product__r.Name</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product_Level_2__c</referenceTo>
        <relationshipLabel>Matters/Deals (Product)</relationshipLabel>
        <relationshipName>Matters_Deals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Area__c</fullName>
        <description>Mark a deal as belonging to a specific product sector</description>
        <inlineHelpText>Mark a deal as belonging to a specific product sector</inlineHelpText>
        <label>Product Area</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Coverage_Area__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate Finance</fullName>
                </value>
                <value>
                    <fullName>Debt Capital Markets</fullName>
                </value>
                <value>
                    <fullName>Equities - Legal</fullName>
                </value>
                <value>
                    <fullName>Equity Capital Markets</fullName>
                </value>
                <value>
                    <fullName>Exchange Traded Funds</fullName>
                </value>
                <value>
                    <fullName>Global Finance</fullName>
                </value>
                <value>
                    <fullName>Global Finance - Legal</fullName>
                </value>
                <value>
                    <fullName>Global Loans</fullName>
                </value>
                <value>
                    <fullName>Legal Standard Product</fullName>
                </value>
                <value>
                    <fullName>Leverage Finance</fullName>
                </value>
                <value>
                    <fullName>Markets</fullName>
                </value>
                <value>
                    <fullName>Mergers &amp; Acquisitions</fullName>
                </value>
                <value>
                    <fullName>--None--</fullName>
                </value>
                <value>
                    <fullName>Prime Services</fullName>
                </value>
                <value>
                    <fullName>Private Equity</fullName>
                </value>
                <value>
                    <fullName>Project Finance</fullName>
                </value>
                <value>
                    <fullName>Public Sector</fullName>
                </value>
                <value>
                    <fullName>Receivables Finance</fullName>
                </value>
                <value>
                    <fullName>Risk Solutions Group</fullName>
                </value>
                <value>
                    <fullName>STCF</fullName>
                </value>
                <value>
                    <fullName>Structured Commodity Finance</fullName>
                </value>
                <value>
                    <fullName>Structured Products</fullName>
                </value>
                <value>
                    <fullName>Structured Trade Finance</fullName>
                    <default>true</default>
                    <label>Structured Trade Finance</label>
                </value>
                <value>
                    <fullName>Supplier Finance</fullName>
                </value>
                <value>
                    <fullName>Trade &amp; Working Capital​</fullName>
                </value>
                <value>
                    <fullName>Trade Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provision_Conduct__c</fullName>
        <label>Provision - Conduct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Provision_Legal_Fee__c</fullName>
        <label>Provision - Legal Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Provision_Litigation__c</fullName>
        <label>Provision - Litigation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating_Scale__c</fullName>
        <description>Rating Scale on AdvoLogix</description>
        <inlineHelpText>Prioritisation - Rating Scale</inlineHelpText>
        <label>Rating Scale</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Prioritisation__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reasonably_Possible__c</fullName>
        <label>Reasonably Possible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Records_Retention__c</fullName>
        <label>Records Retention</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Records_Retention</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_Number__c</fullName>
        <formula>advpm__Primary_Account__r.Registration_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <formula>advpm__Primary_Account__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Type_picklist__c</fullName>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Manager</fullName>
                </value>
                <value>
                    <fullName>Counterparty</fullName>
                </value>
                <value>
                    <fullName>Collective Investment Scheme Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Market Transaction Relationship</relationshipLabel>
        <relationshipName>Matters_Deals2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remote__c</fullName>
        <label>Remote</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reputational_Risk_Type__c</fullName>
        <label>Reputational Risk Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Appeals to SCA/Con Court</fullName>
                </value>
                <value>
                    <fullName>Applications for leave to Appeal</fullName>
                </value>
                <value>
                    <fullName>Media Attention</fullName>
                </value>
                <value>
                    <fullName>PEP</fullName>
                </value>
                <value>
                    <fullName>Regulatory</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reputational_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reputational Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Matter</fullName>
                </value>
                <value>
                    <fullName>Query</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requestor_Email_Address__c</fullName>
        <label>Requestor Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Requestor_Name__c</fullName>
        <label>Requestor Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible Person</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>Matters/Deals (Responsible Person)</relationshipLabel>
        <relationshipName>Matters_Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Review_Frequency_days__c</fullName>
        <label>Review Frequency (days)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDS_ID_Account__c</fullName>
        <formula>advpm__Primary_Account__r.SDS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SDS ID (Account)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPV_Description__c</fullName>
        <label>SPV Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Securitization_value__c</fullName>
        <label>Security value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cluster__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Segment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_User__c</fullName>
        <label>Source User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Specify start date of the Deal/Transation</description>
        <inlineHelpText>Specify Transaction/Deal start date</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Change_Stamp__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Status Change Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subcategory__c</fullName>
        <label>Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Categories</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TMG_Product_Level_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coverage Area</label>
        <referenceTo>TMG_Product_Level_1__c</referenceTo>
        <relationshipLabel>Matters/Deals</relationshipLabel>
        <relationshipName>Matters_Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TMG_Product_Level_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Area</label>
        <referenceTo>TMG_Product_Level_2__c</referenceTo>
        <relationshipLabel>Matters/Deals</relationshipLabel>
        <relationshipName>Matters_Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TMG_Product_Level_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement Product Grouping</label>
        <referenceTo>TMG_Product_Level_3__c</referenceTo>
        <relationshipLabel>Matters/Deals</relationshipLabel>
        <relationshipName>Matters_Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalDispositionAmount__c</fullName>
        <description>Sum of negative plus positive amounts</description>
        <formula>Positive_Outcome_Before_All_Costs__c  - Negative_Outcome_Before_All_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Disposition Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalLimitBalance__c</fullName>
        <description>RN - CloudSmiths</description>
        <inlineHelpText>Indicates the agreement limit minus the total related drawdown amounts</inlineHelpText>
        <label>Total Limit Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Claim_Percentage__c</fullName>
        <description>Used for validation, must always add up to 100</description>
        <label>Total Claim Percentage</label>
        <summarizedField>Business_Unit_Claim__c.Portion_of_Claim__c</summarizedField>
        <summaryForeignKey>Business_Unit_Claim__c.Matter__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Claim_Value_New__c</fullName>
        <formula>Remote__c  +  Reasonably_Possible__c +  Probable_Approved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Claim Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Undisclosed__c</fullName>
        <label>Undisclosed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vault__c</fullName>
        <label>Vault</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zippel__c</fullName>
        <label>Zippel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>advpm__Alt_Matter_Name__c</fullName>
        <description>Allows you to Enter an alternate name for the matter in addition to the Official Matter name</description>
        <label>Alt Matter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Analysis_Narrative__c</fullName>
        <label>Analysis Narrative</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>advpm__AutoAdd__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AutoAdd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Budget__c</fullName>
        <inlineHelpText>If Budgets exist for Matter then this value will be computed automatically from the related Budget records.</inlineHelpText>
        <label>Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>advpm__Client_Matter_ID__c</fullName>
        <label>Client&apos;s Matter ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>advpm__Date_Filed__c</fullName>
        <label>Date Filed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>advpm__Date_Responded__c</fullName>
        <label>Date Responded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>advpm__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>advpm__Engagement_Date__c</fullName>
        <label>Engagement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>advpm__Estimated_Cost__c</fullName>
        <label>Estimated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>advpm__Estimated_Settlement__c</fullName>
        <label>Estimated Settlement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>advpm__Expected_Billings__c</fullName>
        <label>Expected Billings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>advpm__Expected_Settlement_Date__c</fullName>
        <label>Expected Settlement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>advpm__Expected_Total_Annual_Billing__c</fullName>
        <label>Expected Total Annual Billing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>advpm__Expense_Budget__c</fullName>
        <inlineHelpText>If Budgets exist for Matter then this value will be computed automatically from the related Budget records.</inlineHelpText>
        <label>Expense Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>advpm__Fee_Budget__c</fullName>
        <inlineHelpText>If Budgets exist for Matter then this value will be computed automatically from the related Budget records.</inlineHelpText>
        <label>Fee Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>advpm__Hours_Budget__c</fullName>
        <inlineHelpText>If Budgets exist for Matter then this value will be computed automatically from the related Budget records.</inlineHelpText>
        <label>Allocated Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>advpm__Internal_Dept_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Dept Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Matters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__Legal_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Lock_Budgets__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Lock = True, you can not Add, Edit or Delete any related budget records.</inlineHelpText>
        <label>Lock Budgets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Matter_Age__c</fullName>
        <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Matter Age (in days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>advpm__Matter_Last_Activity_Date__c</fullName>
        <label>Last Activity (Deprecated)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>advpm__Matter_Number__c</fullName>
        <label>Matter Number</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>advpm__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Matters</relationshipLabel>
        <relationshipName>Matters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__Parent_Matter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Matter</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>Sub-Matters</relationshipLabel>
        <relationshipName>Matters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__Potential_Plea_Settlement_Offer_Scenario__c</fullName>
        <label>Potential Plea/Settlement Offer Scenario</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>advpm__Primary_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Matters</relationshipLabel>
        <relationshipName>Matters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Matters</relationshipLabel>
        <relationshipName>Matters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__Projected_Date_Of_Closure__c</fullName>
        <label>Projected Date Of Closure</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>advpm__Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Investigation</fullName>
                </value>
                <value>
                    <fullName>Pleadings</fullName>
                </value>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>Pre-Trial</fullName>
                </value>
                <value>
                    <fullName>Trial</fullName>
                </value>
                <value>
                    <fullName>Post-Trial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Discharged</fullName>
                </value>
                <value>
                    <fullName>Filed</fullName>
                </value>
                <value>
                    <fullName>In Appeal</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Matured</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Settled</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Summary_Of_Case_Strategy__c</fullName>
        <label>Summary Of Case Strategy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>